Fix typos in u-a man page
Add a missing paragraph with heading tag.
Replace reference to ‘link’ with ‘name’ in --auto.

Reported-by: Helge Kreutzmann <debian@helgefjell.de>

--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -275,8 +275,8 @@ Thus a simple way to fix all broken alternatives is to call
 \fByes \[aq]\[aq] | update-alternatives \-\-force \-\-all\fR.
 .TP
 \fB\-\-auto\fR \fIname\fR
-Switch the link group behind the alternative name
-.I link
+Switch the link group behind the alternative for
+.I name
 to automatic mode.
 In the process, the master symlink and its slaves are updated
 to point to the highest priority installed alternatives.
@@ -338,6 +338,7 @@ Specifies the log file, when this is to be different from the default
 .BI \-\-force
 Let \fBupdate-alternatives\fR replace any real file that is installed
 where an alternative link has to be installed.
+.TP
 .BI \-\-skip\-auto
 Skip configuration prompt for alternatives which are properly configured
 in automatic mode. This option is only relevant with \fB\-\-config\fR or
