--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.14.27) UNRELEASED; urgency=low
 
-  *
+  * Cherry-pick some fixes from squeeze concerning new source formats:
+    - dpkg-source now accepts additional tarballs (in format "3.0 (quilt)")
+      with a "component" name containing dashes. Closes: #524376
 
  -- Raphael Hertzog <hertzog@debian.org>  Thu, 09 Apr 2009 20:32:31 +0200
 
