dpkg-source: accept dashes in component name of additional tarballs
The regular expression used to identify additional tarballs (used in
formats "2.0" and "3.0 (quilt)") was too strict and refused dashes. This
commit fixes that and documents the set of allowed characters in the
dpkg-source manual page.

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     available. Closes: #523329
   * dpkg-gencontrol now handles properly (empty) dependencies which contain
     only spaces. Closes: #522787
+  * dpkg-source now accepts additional tarballs (in format "3.0 (quilt)")
+    with a "component" name containing dashes. Closes: #524376
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
