dpkg-source: don't complain on binary files that are ignored
To avoid mistakes with "3.0 (quilt)" source packages, dpkg-source fails if
it finds binary files that have not been whitelisted in the debian
directory. Unfortunately it also fails on binary files that are ignored
and that will not be included in the debian tarball. This commit fixes
that although not completely.

The exclude patterns passed to tar --exclude are used to match filenames
and also full path names inside the tarball. This commit only adds support
for simple filename match. It is enough for all realistic cases.

--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     only spaces. Closes: #522787
   * dpkg-source now accepts additional tarballs (in format "3.0 (quilt)")
     with a "component" name containing dashes. Closes: #524376
+  * Fix dpkg-source to not complain on binary files that are ignored and are
+    not going to be included in the debian tarball of a "3.0 (quilt)" source
+    package. Closes: #524375
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
