dpkg-source: don't complain on binary files that are ignored
To avoid mistakes with "3.0 (quilt)" source packages, dpkg-source fails if
it finds binary files that have not been whitelisted in the debian
directory. Unfortunately it also fails on binary files that are ignored
and that will not be included in the debian tarball. This commit fixes
that although not completely.

The exclude patterns passed to tar --exclude are used to match filenames
and also full path names inside the tarball. This commit only adds support
for simple filename match. It is enough for all realistic cases.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dpkg (1.14.28) UNRELEASED; urgency=low
+
+  * Another round of updates concerning new source formats:
+    - fix dpkg-source to not complain on binary files that are ignored and are
+      not going to be included in the debian tarball of a "3.0 (quilt)" source
+      package. Closes: #524375
+
+ -- Raphael Hertzog <hertzog@debian.org>  Sun, 03 Jan 2010 18:21:35 +0100
+
 dpkg (1.14.27) stable; urgency=low
 
   * Cherry-pick some fixes from squeeze concerning new source formats:
