Update Standards-Version to 3.8.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Fix dpkg-source to not complain on binary files that are ignored and are
     not going to be included in the debian tarball of a "3.0 (quilt)" source
     package. Closes: #524375
+  * Bump Standards-Version to 3.8.1 (no change required).
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
