--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     not going to be included in the debian tarball of a "3.0 (quilt)" source
     package. Closes: #524375
   * Bump Standards-Version to 3.8.1 (no change required).
+  * Do not store usernames and group names in tarballs created by dpkg-source,
+    they are anyway ignored at unpack time. Closes: #523184
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
