Updated Russian translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -102,6 +102,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Slovak (Ivan Masár). Closes: #519084
   * Swedish (Peter Krefting).
   * Esperanto (Felipe Castro). Closes: #523023
+  * Russian (Yuri Kozlov). Closes: #526659
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
