Add '.hgtags' to the default dpkg-source -i regex and -I pattern
Closes: #525854

--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Detect the curses headers to use instead of hardcoding them.
   * Make dpkg-source do not set arch:any in .dsc on arch-restricted packages.
     Thanks to Philipp Kern <pkern@debian.org>. Closes: #526617
+  * Add '.hgtags' to the default dpkg-source -i regex and -I pattern.
+    Closes: #525854
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
