update-alternatives: don't remove real files conflicting with link
When an alternative is installed and a real file is in conflict, the real
file is kept. When the same alternative is fully removed, the real file
should be kept according to the same logic (but currently it was removed).
This commit modifies update-alternatives to follow this expected
behaviour.

Also add a non-regression test.

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.8.1 (no change required).
   * Do not store usernames and group names in tarballs created by dpkg-source,
     they are anyway ignored at unpack time. Closes: #523184
+  * Fix update-alternatives to not remove real files installed in place of
+    an alternative link when the corresponding alternative is fully removed.
+    Closes: #526538
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
