Use backticks instead of non-portable make $(shell) function
The backticks are treated like text, until the shell expands them, thus
making this solution portable.

--- a/debian/changelog
+++ b/debian/changelog
@@ -79,6 +79,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     Thanks to Philipp Kern <pkern@debian.org>. Closes: #526617
   * Add '.hgtags' to the default dpkg-source -i regex and -I pattern.
     Closes: #525854
+  * Use backticks instead of non-portable make $(shell) function in automake.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
