Do not install dselect and s-s-d man pages if disabled on configure
When configuring with --without-dselect or --without-start-stop-daemon,
do not install the man pages related to those programs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -80,6 +80,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Add '.hgtags' to the default dpkg-source -i regex and -I pattern.
     Closes: #525854
   * Use backticks instead of non-portable make $(shell) function in automake.
+  * Do not install dselect and start-stop-daemon man pages when the programs
+    have been disabled from configure.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
