Move Debian keyrings to the Debian vendor keyring hook
As Ubuntu is a derivative from Debian, make it inherit the Debian vendor
class when running the keyrings hook.

--- a/debian/changelog
+++ b/debian/changelog
@@ -86,6 +86,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Use backticks instead of non-portable make $(shell) function in automake.
   * Do not install dselect and start-stop-daemon man pages when the programs
     have been disabled from configure.
+  * Move Debian specific keyrings to the Debian vendor class and change the
+    Ubuntu vendor class to inherit from it.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
