dpkg-source: fix automatic patch registration in format 3.0 (quilt)
When the automatic patch is updated due to a second call to
dpkg-source, it's not always properly registered with quilt.
It must be applied with quilt itself otherwise quilt pop
then quilt push might fail when supplementary files have been modified
outside of quilt's knowledge.

Furthermore quilt import was not a good choice as it failed trying to copy
the patch over itself. The new approach is to revert the patch and let
quilt reapply it with quilt fold. It will go over the list of files
modified by the new patch and add those which were not yet part of the
previous patch (hence adding the required unmodified files in
.pc/<patch-name>/).

Based-on-patch-by: Goswin von Brederlow <goswin-v-b@web.de>

--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,10 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     /etc/dpkg/origins. It can be used in debian/rules to enable different
     behaviour depending on the current vendor at the time of the build.
     Closes: #498380
+  * Ensure that the automatic patch created in format "3.0 (quilt)" is always
+    well registered with quilt even when it's updated by a new call to
+    dpkg-source. Thanks to Goswin von Brederlow for the initial patch.
+    Closes: #525858
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
