--- a/debian/changelog
+++ b/debian/changelog
@@ -88,6 +88,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     have been disabled from configure.
   * Move Debian specific keyrings to the Debian vendor class and change the
     Ubuntu vendor class to inherit from it.
+  * Do not set the Arch substvar in dpkg-source, avoiding generating warnings
+    when there's no compiler present. Closes: #526132
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
