s-s-d: Only print fatal errno string if it was non-zero

--- a/debian/changelog
+++ b/debian/changelog
@@ -92,6 +92,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     when there's no compiler present. Closes: #526132
   * Preserve faulting errno when printing reason in start-stop-daemon fatal
     function.
+  * Only print fatal errno string in start-stop-daemon if it was non-zero.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
