dpkg-source: minor update to "3.0 (quilt)" format
Do not update/create debian/patches/.dpkg-source-applied during build,
it's only meant to document what patches have been applied at extraction
time.

Also try to cleanup in case the patch serie is empty after removal of the
automatic patch. First remove debian/patches/series if it's empty and then
debian/patches/ itself in case it's empty as well.

--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     well registered with quilt even when it's updated by a new call to
     dpkg-source. Thanks to Goswin von Brederlow for the initial patch.
     Closes: #525858
+  * Do not update/create debian/patches/.dpkg-source-applied during build,
+    it's only meant to document what patches have been applied at extraction
+    time. Closes: #525835
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
