dpkg-buildpackage: add execute right on debian/rules when missing
That right should normally not be missing as dpkg-source -x automatically
sets it. However manually applying a Debian diff doesn't restore
that right so let dpkg-buildpackage restore it in that case and display a
warning to let the user know that it was not really normal.

--- a/debian/changelog
+++ b/debian/changelog
@@ -77,6 +77,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Do not update/create debian/patches/.dpkg-source-applied during build,
     it's only meant to document what patches have been applied at extraction
     time. Closes: #525835
+  * Let dpkg-buildpackage add the missing execute right on debian/rules if
+    needed. Display a warning when it happens. Closes: #499088
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
