Print a warning when using obsolete --print-installation-architecture
Packages should be switched to use --print-architecture. This option
will be removed sometime in the future.

Closes: #528171

--- a/debian/changelog
+++ b/debian/changelog
@@ -104,6 +104,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Only print fatal errno string in start-stop-daemon if it was non-zero.
   * Print the valid values for the IO scheduler class in start-stop-daemon
     --help output.
+  * Print a warning when using obsolete '--print-installation-architecture'.
+    Closes: #528171
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
