--- a/debian/changelog
+++ b/debian/changelog
@@ -107,6 +107,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Print a warning when using obsolete '--print-installation-architecture'.
     Closes: #528171
   * Remove obsolete --largemem and --smallmem dpkg options.
+  * Remove obsolete --force-auto-select dpkg option.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
