dpkg-buildpackage: allow options -nc and -S together
This combination is generally not recommended as you want to ensure
that a source package contains only source and not any intermediary files
left-over by the previous build. Nevertheless it can be useful from time
to time and instead of bluntly refusing, we now simply warn the user
and let the build proceed.

-nc still implies -b if nothing else has been specified as it's routinely
used to test if a fix is working by restarting a previously interrupted
build where it failed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -79,6 +79,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     time. Closes: #525835
   * Let dpkg-buildpackage add the missing execute right on debian/rules if
     needed. Display a warning when it happens. Closes: #499088
+  * Allow to combine -nc and -S in dpkg-buildpackage but display a warning
+    saying that it's not advised. Closes: #304404
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
