--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     /etc/dpkg/origins. It can be used in debian/rules to enable different
     behaviour depending on the current vendor at the time of the build.
     Closes: #498380
+    Modify dpkg-buildpackage to not set the DEB_VENDOR environment variable,
+    packages should use the dpkg-vendor program instead.
   * Ensure that the automatic patch created in format "3.0 (quilt)" is always
     well registered with quilt even when it's updated by a new call to
     dpkg-source. Thanks to Goswin von Brederlow for the initial patch.
