Fix changelog parsing code to differentiate the empty string from 0
In many places, the code tested for a false version instead of
an empty version string. Fixing all those enabled dpkg-buildpackage -v0 to
work as expected.

--- a/debian/changelog
+++ b/debian/changelog
@@ -85,6 +85,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     saying that it's not advised. Closes: #304404
   * Let dpkg-buildpackage error out with subprocerr() when dpkg-checkbuilddeps
     is interrupted/killed by a signal. Closes: #498734
+  * Fix dpkg-buildpackage/dpkg-genchanges to properly interpret option -v0.
+    Closes: #475916
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
