dpkg-parsechangelog: handle better non-existing versions
When a non-existing version is passed in one of the --since, --until,
--to, --from options, the code will now replace them by a closely related
version that really exists.

--- a/debian/changelog
+++ b/debian/changelog
@@ -87,6 +87,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     is interrupted/killed by a signal. Closes: #498734
   * Fix dpkg-buildpackage/dpkg-genchanges to properly interpret option -v0.
     Closes: #475916
+  * Improves how dpkg-parsechangelog handles non-existing versions
+    in its --since, --until, --to, --from options. Approximate the intent
+    by selectioning the nearest version instead. Closes: #477638
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
