--- a/man/dpkg-parsechangelog.1
+++ b/man/dpkg-parsechangelog.1
@@ -82,23 +82,23 @@ The \fBrfc822\fP format uses the same fields but outputs
 a separate paragraph for each changelog entry so that all
 metadata for each entry is preserved.
 .TP
-.BR \-\-since ", " \-s ", " \-v " \fIversion\fP"
+.BR \-\-since " \fIversion\fP, " \-s \fIversion\fP, " \-v" \fIversion\fP
 include all changes later than \fIversion\fP.
 .TP
-.BR \-\-until ", " \-u " \fIversion\fP"
+.BR \-\-until " \fIversion\fP, " \-u \fIversion\fP
 include all changes earlier than \fIversion\fP.
 .TP
-.BR \-\-from ", " \-f " \fIversion\fP"
+.BR \-\-from " \fIversion\fP, " \-f \fIversion\fP
 include all changes equal or later than \fIversion\fP.
 .TP
-.BR \-\-to ", " \-t " \fIversion\fP"
+.BR \-\-to " \fIversion\fP, " \-t \fIversion\fP
 include all changes up to or equal than \fIversion\fP.
 .TP
-.BR \-\-count ", " \-c ", " \-n " \fInumber\fI"
+.BR \-\-count " \fInumber\fP, " \-c "\fInumber\fP, " \-n \fInumber\fP
 include \fInumber\fP entries from the top (or the tail
 if \fInumber\fP is lower than 0).
 .TP
-.BR \-\-offset ", " \-o " \fInumber\fP"
+.BR \-\-offset " \fInumber\fP, " \-o \fInumber\fP
 change the starting point for \-\-count, counted from the top
 (or the tail if \fInumber\fP is lower than 0).
 .TP
