Remove deprecated status for substvars in dpkg-source and dpkg-genchanges
Even if there's no use at all for substvars or they are (currently)
undesirable making the source not easily reproducible for Debian and
most derivatives using the same build processesor, it might be
interesting for uses like templated source package generation and
similar, or other interesting ideas we might not have thought about.

Also the same logic we applied for the removal of the substvar support
could be applied to most of the “Build options” as well, as those do not
make sense in the normal build for official packages (like -U, or -D).

Changed the code to stop producing warnings, and remove deprecated notes
from man page.

--- a/debian/changelog
+++ b/debian/changelog
@@ -125,6 +125,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Remove obsolete priorities support from dpkg.
   * Remove obsolete 822-date program.
   * Do not right justify the database reading progress percent counter.
+  * Remove deprecated status on substvars for dpkg-source dpkg-genchanges,
+    and stop producing warnings.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
