--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -96,11 +96,11 @@ multiple times, they are tried in order. It does
 override any format given in \fBdebian/source/format\fP.
 .TP
 .BI \-V name = value
-\fBDeprecated\fP. Set an output substitution variable.
+Set an output substitution variable.
 See \fBdeb\-substvars\fP(5) for a discussion of output substitution.
 .TP
 .BI \-T substvarsfile
-\fBDeprecated\fP. Read substitution variables in
+Read substitution variables in
 .IR substvarsfile ;
 the default is to not read any file.
 .TP
