Make deprecated dpkg-scanpackages --udeb option produce a warning
Callers should use -tudeb instead.

--- a/debian/changelog
+++ b/debian/changelog
@@ -127,6 +127,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Do not right justify the database reading progress percent counter.
   * Remove deprecated status on substvars for dpkg-source dpkg-genchanges,
     and stop producing warnings.
+  * Make deprecated dpkg-scanpackages --udeb option produce a warning.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
