dpkg-source: Do not state in --help there is a default substvar file

--- a/debian/changelog
+++ b/debian/changelog
@@ -128,6 +128,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Remove deprecated status on substvars for dpkg-source dpkg-genchanges,
     and stop producing warnings.
   * Make deprecated dpkg-scanpackages --udeb option produce a warning.
+  * Change dpkg-source --help output to state there's no default substvar
+    file to match reality.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
