dpkg-scanpackages: be less annoying with warning about overrides
If the user doesn't specify an override file, then he doesn't care
about the fact that all packages are missing from the (non-existing)
override file. Disable the warning in this case.

In other cases, when the override file is explicitely given, it's a
normal feature that the packages missing from it are listed; exactly like
other weirdness are reported (incorrect maintainer info, spurious override
entries).

Based-on-patch-by: Piotr Engelking <inkerman42@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -93,6 +93,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Update dpkg-parsechangelog's documentation to make it clearer that spaces
     are not allowed between single characters options and their values.
     Closes: #494883
+  * Don't let dpkg-scanpackages complain about missing overrides when
+    no overrides file has been given. Closes: #468106
+    Thanks to Piotr Engelking for the patch.
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
