dpkg-deb: Do not warn when parsing unknown fields with “Private-” prefix
Fields prefixed with “Private-” are intended to be used privately by
individuals, organizations or companies, and are expected to never be
standardized. This guarantees them to never collide with any official
field in the future. Because there's still the danger that different
organizations might end up using the same field name, those should
never be visible in any public repository.

Closes: #353040

Based-on-patch-by: Nils Rennebarth <nils.rennebarth@funkwerk-ec.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -132,6 +132,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     file to match reality.
   * Warn in start-stop-daemon if the argument to --name is longer than the
     supported kernel process name size. Closes: #353015, #519128
+  * Do not warn in dpkg-deb when parsing unknown fields with the “Private-”
+    prefix. Based on a patch by Nils Rennebarth. Closes: #353040
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
