--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.15.2) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Thu, 21 May 2009 07:01:35 +0200
+
 dpkg (1.15.1) unstable; urgency=low
 
   [ Raphael Hertzog ]
