--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.15.2) UNRELEASED; urgency=low
 
-  *
+  * Fix FTBFS on GNU/Hurd due to a missmatched define usage in
+    start-stop-daemon.
 
  -- Guillem Jover <guillem@debian.org>  Thu, 21 May 2009 07:01:35 +0200
 
