--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ dpkg (1.15.2) UNRELEASED; urgency=low
   * Remove obsolete priorities support from dselect.
     Thanks to Sven Joachim <svenjoac@gmx.de>.
 
+  [ Updated dpkg translations ]
+  * Basque (Piarres Beobide). Closes: #529857
+
  -- Guillem Jover <guillem@debian.org>  Thu, 21 May 2009 07:01:35 +0200
 
 dpkg (1.15.1) unstable; urgency=low
