--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ dpkg (1.15.2) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #529857
+  * Asturian (Marcos Alvarez Costales). Closes: #529889
 
  -- Guillem Jover <guillem@debian.org>  Thu, 21 May 2009 07:01:35 +0200
 
