--- a/po/ast.po
+++ b/po/ast.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.14.22\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-05-21 06:30+0200\n"
-"PO-Revision-Date: 2009-03-15 13:11+0100\n"
-"Last-Translator: astur <malditoastur@gmail.com>\n"
+"PO-Revision-Date: 2009-05-22 08:01+0100\n"
+"Last-Translator: Marcos <marcos.alvarez.costales@gmail.com>\n"
 "Language-Team: Asturian <softast-xeneral@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2113,9 +2113,9 @@ msgstr ""
 "nun pueden satisfacese les pre-dependencies pa %.250s (necesaries por %.250s)"
 
 #: src/enquiry.c:393
-#, fuzzy, c-format
+#, c-format
 msgid "obsolete option '--%s', please use '--%s' instead."
-msgstr "opción obsoleta '--%s'\n"
+msgstr "opción obsoleta '--%s', por favor, usa nel so llugar '--%s'"
 
 #: src/enquiry.c:434
 msgid ""
