--- a/po/fr.po
+++ b/po/fr.po
@@ -25,14 +25,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-05-21 06:30+0200\n"
-"PO-Revision-Date: 2009-03-18 20:11+0100\n"
+"PO-Revision-Date: 2009-05-22 08:55+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 0.3\n"
 
 #: lib/compression.c:35
 #, c-format
@@ -2189,10 +2189,9 @@ msgid "cannot satisfy pre-dependencies for %.250s (wanted due to %.250s)"
 msgstr ""
 "ne peut satisfaire les pré-dépendances pour %.250s (réclamé par %.250s)"
 
-#: src/enquiry.c:393
-#, fuzzy, c-format
+#: src/enquiry.c:393, c-format
 msgid "obsolete option '--%s', please use '--%s' instead."
-msgstr "option obsolète « --%s »\n"
+msgstr "option obsolète « --%s », veuillez utiliser « --%s » à la place.\n"
 
 #: src/enquiry.c:434
 msgid ""
