--- a/debian/changelog
+++ b/debian/changelog
@@ -6,9 +6,10 @@ dpkg (1.15.2) UNRELEASED; urgency=low
     Thanks to Sven Joachim <svenjoac@gmx.de>.
 
   [ Updated dpkg translations ]
-  * Basque (Piarres Beobide). Closes: #529857
   * Asturian (Marcos Alvarez Costales). Closes: #529889
-  * French (Christian Perrier)
+  * Basque (Piarres Beobide). Closes: #529857
+  * French (Christian Perrier).
+  * German (Sven Joachim).
 
  -- Guillem Jover <guillem@debian.org>  Thu, 21 May 2009 07:01:35 +0200
 
