--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,10 @@ dpkg (1.15.2) UNRELEASED; urgency=low
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
- 
+
+  [ Updated scripts translations ]
+  * French (Christian Perrier).
+
  -- Guillem Jover <guillem@debian.org>  Thu, 21 May 2009 07:01:35 +0200
 
 dpkg (1.15.1) unstable; urgency=low
@@ -387,7 +390,7 @@ dpkg (1.15.0) experimental; urgency=low
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
   * Korean (Changwoo Ryu).
-  * Romanian (Eddy Petrișor)
+  * Romanian (Eddy Petri?or)
   * Slovak (Ivan Masár). Closes: #514490
 
  -- Guillem Jover <guillem@debian.org>  Mon, 02 Mar 2009 06:13:53 +0200
@@ -485,7 +488,7 @@ dpkg (1.14.23) unstable; urgency=low
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo). Closes: #505869
   * Russian (Yuri Kozlov). Closes: #499028, #505735
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
   * Slovak (Ivan Masár). Closes: #506024
   * Spanish (Javier Fernandez-Sanguino). Closes: #505836
   * Swedish (Peter Krefting).
@@ -575,7 +578,7 @@ dpkg (1.14.21) unstable; urgency=low
   * French (Christian Perrier).
   * German (Sven Joachim).
   * Korean (Changwoo Ryu).
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
   * Russian (Yuri Kozlov). Closes: #488689
   * Simplified Chinese (Deng Xiyue). Closes: #496176
   * Slovak (Ivan Masár). Closes: #488903, #495505
@@ -585,7 +588,7 @@ dpkg (1.14.21) unstable; urgency=low
   * Lithuanian (Gintautas Miliauskas). Closes: #493326
 
   [ Updated dselect translations ]
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 Aug 2008 05:32:39 +0300
 
