--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,8 @@ dpkg (1.15.2) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * French (Christian Perrier).
-
+  * German (Helge Kreutzmann).
+ 
  -- Guillem Jover <guillem@debian.org>  Thu, 21 May 2009 07:01:35 +0200
 
 dpkg (1.15.1) unstable; urgency=low
