--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ dpkg (1.15.2) UNRELEASED; urgency=low
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
 
+  [ Updated dselect translations ]
+  * French (Christian Perrier).
+
   [ Updated scripts translations ]
   * French (Christian Perrier).
   * German (Helge Kreutzmann).
