--- a/dselect/po/fr.po
+++ b/dselect/po/fr.po
@@ -1,21 +1,9 @@
-# translation of fr.po to French
-# Dpkg --- the Debian GNU/Linux package maintenance system.
-#
-# Copyright (C) 1994,1995,1996 Ian Jackson <ian@chiark.greenend.org.uk>
-# Copyright (C) 1995,1996 Erick Branderhorst <branderhorst@heel.fgg.eur.nl>
-# Copyright (C) 1996 Miquel van Smoorenburg <miquels@cistron.nl>
-# Copyright (C) 1996 Kim-Minh Kaplan <kkaplan@cdfhp3.in2p3.fr>
-# Copyright (C) 1996 Michael Shields <shields@crosslink.net>
-# Copyright (C) 1995 Bruce Perens <bruce@pixar.com>
-# Copyright (C) 1994 Carl Streeter <streeter@cae.wisc.edu>
-# Copyright (C) 1994 Matt Welsh <mdw@sunsite.unc.edu>
-# Copyright (C) 1994 Ian Murdock <imurdock@debian.org>
-# Parts written by Colin Plumb and Branko Lankester in 1993.
-#
+# translation of dselect to French
 # Messages français pour dpkg (Linux-GNU Debian).
 # Copyright (C) 1997 Christophe Le Bars <clebars@debian.org>.
 # Copyright (C) 2000 Jérôme Marant <jerome.marant@free.fr>
 # Copyright (C) 2000, 2001, 2002 Martin Quinson <Martin.Quinson@tuxfamily.org>
+# Copyright (C) 2005-2009 Christian Perrier <bubulle@debian.org>
 #
 #
 # #######################################"
@@ -57,19 +45,19 @@
 # abréviation postint...
 # to fsync (synchroniser?)
 #
-# Christian Perrier <bubulle@debian.org>, 2005, 2006, 2007, 2008.
+# Christian Perrier <bubulle@debian.org>, 2005, 2006, 2007, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-05-21 06:34+0200\n"
-"PO-Revision-Date: 2008-05-03 18:52+0200\n"
+"PO-Revision-Date: 2009-05-24 09:39+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 0.3\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n>1;\n"
 
 #: dselect/basecmds.cc:124
@@ -1680,7 +1668,7 @@ msgstr "Informations disponibles du fichier de contrôle"
 
 #: dselect/pkglist.cc:419
 msgid "There are no packages."
-msgstr ""
+msgstr "Il n'existe pas de paquets."
 
 #: dselect/pkglist.cc:506
 msgid "invalid search option given"
