--- a/po/fr.po
+++ b/po/fr.po
@@ -1,21 +1,9 @@
 # translation of fr.po to French
-# Dpkg --- the Debian GNU/Linux package maintenance system.
-#
-# Copyright (C) 1994,1995,1996 Ian Jackson <ian@chiark.greenend.org.uk>
-# Copyright (C) 1995,1996 Erick Branderhorst <branderhorst@heel.fgg.eur.nl>
-# Copyright (C) 1996 Miquel van Smoorenburg <miquels@cistron.nl>
-# Copyright (C) 1996 Kim-Minh Kaplan <kkaplan@cdfhp3.in2p3.fr>
-# Copyright (C) 1996 Michael Shields <shields@crosslink.net>
-# Copyright (C) 1995 Bruce Perens <bruce@pixar.com>
-# Copyright (C) 1994 Carl Streeter <streeter@cae.wisc.edu>
-# Copyright (C) 1994 Matt Welsh <mdw@sunsite.unc.edu>
-# Copyright (C) 1994 Ian Murdock <imurdock@debian.org>
-# Parts written by Colin Plumb and Branko Lankester in 1993.
-#
 # Messages français pour dpkg (Linux-GNU Debian).
 # Copyright (C) 1997 Christophe Le Bars <clebars@debian.org>.
 # Copyright (C) 2000 Jerome Marant <jerome.marant@free.fr>
 # Copyright (C) 2000, 2001, 2002 Martin Quinson <Martin.Quinson@tuxfamily.org>
+# Copyright (C) 2005-2009 Debian French l10n team <debian-l10n-french@lists.debian.org>
 #
 # Christian Perrier <bubulle@debian.org>, 2005, 2006, 2008, 2009.
 # Frederic Bothamy <frederic.bothamy@free.fr>, 2006, 2007.
@@ -2189,9 +2177,10 @@ msgid "cannot satisfy pre-dependencies for %.250s (wanted due to %.250s)"
 msgstr ""
 "ne peut satisfaire les pré-dépendances pour %.250s (réclamé par %.250s)"
 
-#: src/enquiry.c:393, c-format
+#: src/enquiry.c:393
+#, c-format
 msgid "obsolete option '--%s', please use '--%s' instead."
-msgstr "option obsolète « --%s », veuillez utiliser « --%s » à la place.\n"
+msgstr "option obsolète « --%s », veuillez utiliser « --%s » à la place."
 
 #: src/enquiry.c:434
 msgid ""
