Fix typo and unfuzzy translations

--- a/man/dpkg-vendor.1
+++ b/man/dpkg-vendor.1
@@ -42,7 +42,7 @@ with the DEB_VENDOR environment variable or
 .SH ENVIRONMENT
 .TP
 \fBDEB_VENDOR\fP
-This setting defines the current vendor. If not set, il will discover the
+This setting defines the current vendor. If not set, it will discover the
 current vendor by reading \fB/etc/dpkg/origins/default\fP.
 .
 .SH AUTHOR
