dselect: Fix bashism (“echo -e”) in disk setup method
Closes: #530071

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.15.2) UNRELEASED; urgency=low
     start-stop-daemon.
   * Remove obsolete priorities support from dselect.
     Thanks to Sven Joachim <svenjoac@gmx.de>.
+  * Fix bashism (“echo -e”) in dselect disk setup method. Closes: #530071
 
   [ Updated dpkg translations ]
   * Asturian (Marcos Alvarez Costales). Closes: #529889
