dselect: Properly parse fdisk output in disk setup method
util-linux's fdisk has not emitted the Begin column since 1998-06-10
version 2.8. Change the parsing code accordingly to make it actually
work.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
 dpkg (1.15.2) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Fix FTBFS on GNU/Hurd due to a missmatched define usage in
     start-stop-daemon.
   * Remove obsolete priorities support from dselect.
     Thanks to Sven Joachim <svenjoac@gmx.de>.
   * Fix bashism (“echo -e”) in dselect disk setup method. Closes: #530071
+  * Properly parse fdisk output in dselect disk setup method.
 
   [ Updated dpkg translations ]
   * Asturian (Marcos Alvarez Costales). Closes: #529889
