--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ dpkg (1.15.2) UNRELEASED; urgency=low
     Thanks to Sven Joachim <svenjoac@gmx.de>.
   * Fix bashism (“echo -e”) in dselect disk setup method. Closes: #530071
   * Properly parse fdisk output in dselect disk setup method.
+  * Fix memory leaks due to not destroying some pkg iterators.
 
   [ Updated dpkg translations ]
   * Asturian (Marcos Alvarez Costales). Closes: #529889
