--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-dpkg (1.15.2) UNRELEASED; urgency=low
+dpkg (1.15.2) unstable; urgency=low
 
   [ Guillem Jover ]
   * Fix FTBFS on GNU/Hurd due to a missmatched define usage in
-    start-stop-daemon.
+    start-stop-daemon. Closes: #530446
   * Remove obsolete priorities support from dselect.
     Thanks to Sven Joachim <svenjoac@gmx.de>.
   * Fix bashism (“echo -e”) in dselect disk setup method. Closes: #530071
@@ -24,8 +24,8 @@ dpkg (1.15.2) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * French (Christian Perrier).
   * German (Helge Kreutzmann).
- 
- -- Guillem Jover <guillem@debian.org>  Thu, 21 May 2009 07:01:35 +0200
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 26 May 2009 01:00:36 +0200
 
 dpkg (1.15.1) unstable; urgency=low
 
