--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.15.3) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 26 May 2009 01:26:04 +0200
+
 dpkg (1.15.2) unstable; urgency=low
 
   [ Guillem Jover ]
