--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 dpkg (1.15.3) UNRELEASED; urgency=low
 
-  *
+  * Unset TAR_OPTIONS when extracting .deb archives. Closes: #530860
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 May 2009 01:26:04 +0200
 
