--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 dpkg (1.15.3) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Unset TAR_OPTIONS when extracting .deb archives. Closes: #530860
+
+  [ Raphael Hertzog ]
+  * Unset TAR_OPTIONS when creating/extracting tar archives for source
+    packages. Closes: #530860
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 May 2009 01:26:04 +0200
 
