Simplified Chinese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Unset TAR_OPTIONS when creating/extracting tar archives for source
     packages. Closes: #530860
 
+  [ Updated dpkg translations ]
+  * Simplified Chinese (Deng Xiyue). Closes: #531387
+
  -- Guillem Jover <guillem@debian.org>  Tue, 26 May 2009 01:26:04 +0200
 
 dpkg (1.15.2) unstable; urgency=low
