Add one more case of alternative to cleanup (Closes: #532739)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Unset TAR_OPTIONS when creating/extracting tar archives for source
     packages. Closes: #530860
   * Add cleanup of known invalid (master) alternatives in preinst script.
-    Closes: #530633, #531611
+    Closes: #530633, #531611, #532739
   * Let update-alternatives fix a manual alternative with a dangling symlink
     by switching it to automatic mode. Closes: #529999
 
