dpkg-buildpackage(1): add missing paragraph separator
Reported-by: Per Andersson <avtobiff@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ dpkg (1.15.3) UNRELEASED; urgency=low
     Closes: #530633, #531611, #532739
   * Let update-alternatives fix a manual alternative with a dangling symlink
     by switching it to automatic mode. Closes: #529999
+  * Add missing paragraph separator in dpkg-buildpackage(1). Thanks to Per
+    Andersson <avtobiff@gmail.com>. Closes: #532769
 
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #531387
