dpkg-gencontrol: warn about unused substvars (closes: #532760)
The change to Dpkg/Fields.pm is required to avoid unwanted warnings
on the F:<fieldname> substitutions.

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,9 @@ dpkg (1.15.3) UNRELEASED; urgency=low
     that the toolchain allows to be shared but that are often static (and
     hence are blacklisted for this reason). Closes: #533642
 
+  [ Joachim Breitner ]
+  * Warn about unused substvars in dpkg-gencontrol. Closes: #532760
+
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #531387
   * Catalan (Jordi Mallach). Closes: #532109
